chore: Added magic link plugin to openapi
